--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,8 @@ body{
   font-family: 'Andika', sans-serif;
   background-size: cover ;
   background-position: center;
+  background-image: "images/pigeon-background.JPEG";
+  background-color: #DDDDDD;
 }
 
 main{
@@ -24,6 +26,8 @@ main{
 h1{
   color: #c12258;
   font-size: 2em;
+  text-align: center;
+  line-height: 2;
 }
 
 caption{
@@ -31,11 +35,19 @@ caption{
 }
 
 p{
-
+  padding-top: 15px;
 }
 
 a{
+  font-size: 16px;
+  color: #B21F50;
+  text-decoration-line: underline;
+  text-decoration-style: wavy;
+}
 
+input:focus {
+  outline-width: 3px;
+  outline-color: #417243;
 }
 
 table{
@@ -66,6 +78,9 @@ tr{
 thead tr:first-child th:first-child{}
 
 footer{
+  min-height: 75px;
+  position: absolute;
+  bottom: 0;
   width:100%;
   background:#000000;
   text-align:center;
