--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
   font-family: 'Andika', sans-serif;
   background-size: cover ;
   background-position: center;
-  background-image: "images/pigeon-background.JPEG";
+  background-image: url("../images/pigeon-background.JPEG");
   background-color: #DDDDDD;
 }
 
