--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ body{
   background-position: center;
   background-image: url("../images/pigeon-background.JPEG");
   background-color: #DDDDDD;
+  background-repeat: no-repeat;
 }
 
 main{
