--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,8 @@ table{
 }
 
 .rowhead{
-  border: 2px solid #000000;
+  border-top: 2px solid #000000;
+  border-right: 2px solid #000000;
 }
 
 td{
