--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ thead tr:first-child th:first-child{
 
 footer{
   min-height: 75px;
-  position: relative;
+  position: fixed;
   bottom: 0;
   width:100%;
   background:#000000;
