--- a/css/style.css
+++ b/css/style.css
@@ -83,8 +83,9 @@ tr:nth-child(odd){
 }
 
 tbody tr:hover{
-  background-color: rgba(126, 8, 32);
-  opacity: .25;
+  background: rgba(126, 8, 32, 0.25);
+  /* background-color: rgba(126, 8, 32);
+  opacity: 0.25; */
 }
 
 *:focus {
@@ -100,6 +101,7 @@ footer{
   min-height: 75px;
   position: fixed;
   bottom: 0;
+  left: 0;
   width:100%;
   background:#000000;
   text-align:center;
