--- a/css/style.css
+++ b/css/style.css
@@ -102,14 +102,11 @@ thead tr:last-child th:last-child {
   border-top-right-radius: 10px;
 }
 
-tbody td:first-child {
+
+
+tbody tr:first-child tr:last-child {
   border-bottom-left-radius: 10px;
 }
-
-tbody td:last-child {
-  border-bottom-right-radius: 10px;
-}
-
 
 /* table td:last-child {
 
