--- a/css/style.css
+++ b/css/style.css
@@ -104,8 +104,12 @@ thead tr:last-child th:last-child {
 
 
 
-tbody tr:first-child tr:last-child {
+tbody tr:first-child {
   border-bottom-left-radius: 10px;
+}
+
+tbody tr:last-child {
+  border-bottom-right-radius: 10px;
 }
 
 /* table td:last-child {
