--- a/css/style.css
+++ b/css/style.css
@@ -104,11 +104,11 @@ thead tr:last-child th:last-child {
 
 
 
-tbody tr:first-child {
+tbody tr:first-child th{
   border-bottom-left-radius: 10px;
 }
 
-tbody tr:last-child {
+tbody tr:last-child td:last-child{
   border-bottom-right-radius: 10px;
 }
 
